# tsqvt-rho-higgs-portal-repo

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: TSQVTrhoPortal.fr
data/: M0.npy  M_rho.npy  Y.npy  metadata.json  spectral_inputs.json
notebooks/: 01_parameter_scan.ipynb  02_benchmark_analysis.ipynb  03_figure_generation.ipynb  04_TSQVT_Master_Analysis.ipynb
notebooks/.ipynb_checkpoints/: 01_parameter_scan-checkpoint.ipynb  02_benchmark_analysis-checkpoint.ipynb  03_figure_generation-checkpoint.ipynb  04_TSQVT_Master_Analysis-checkpoint.ipynb  04_rho_Higgs_Portal_Analysis-checkpoint.ipynb
output/: M0.npy  M0_real.csv  M_rho.npy  M_rho_imag.csv  M_rho_lep_real.csv  M_rho_real.csv  Y.npy  Y_lep_real.csv  Y_real.csv  benchmarks_micro.csv  benchmarks_pheno.csv  benchmarks_v6.csv
results/: scan_Deltakappa_40x40_FINAL.csv  scan_Deltakappa_40x40_central.csv  scan_Deltakappa_40x40_fk_minus30pct.csv  scan_Deltakappa_40x40_fk_plus30pct.csv
scripts/: Fig2_production_modes.py  Fig3_branching_ratios.py  Fig_benchmark_vs_limits.py  kappa_sensitivity.py  scan_alpha1factor_1.0_res_2020.py  scan_alpha1factor_1.0_res_2020_fixed.py  tsqvt_rho_higgs_pipeline.py
src/: README_BRANCHING_RATIOS.md  __init__.py  branching_ratios.py  cross_sections.py  rg_running.py  tsqvt_pipeline.py
tests/: __init__.py  conftest.py  run_tests.py  test_alpha1.py  test_cross_sections.py
