[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsqvt-rho-higgs-portal"
version = "1.0.0"
description = "TSQVT Ï-Higgs Portal Numerical Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kerym Makraini", email = "kerym.makraini@uned.es"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
